# pdf2john

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: r2_rc4_40.txt  r3_rc4_128.txt  r4_aes_128.txt  r6_aes_256.txt
src/: lib.rs  main.rs
